--- a/koulutus.html
+++ b/koulutus.html
@@ -22,31 +22,28 @@
     <a class="link" href="Koulutus.html">Koulutus</a>
 	<a class="link" href="Yhteystiedot.html">Yhteystiedot</a>
 </div>
+
 <div>
-    <h2 class="header2"> Esittely</h2>
+    <h2 class="header2">Koulutuskeskus Salpaus</h2>
 </div>
 <div class="paragraph">
-    <div>
-    Olen Leo Ratilainen 23 vuotias ICT tradenomi opiskelija.
-    </div>
-    <div>
-    Olen alunperin kotoisin Lahdesta missä kävin Kone -ja metallialan josta
-    </div>
-    <div>
-    valmistuin kunnossapitoasentajaksi.
-    </div>
-    <div>
-	Nyt asun Vantaalla ja opiskelen Haaga-Heliassa ICT Tradenomiksi.
-    </div>
+    <div>06/2016-08/2019</div>
+    <div>Kone- ja metalliala</div>
+    <div>kunnossapitoasentaja</div>
 </div>
-<h2 class="header2">Taidot</h2>
 <div>
-	<ol class="list">
-		<li>Windows</li>
-		<li>Word</li>
-		<li>Excel</li>
-		<li>PowerPoint</li>
-	</ol>
+    <h2 class="header2">Suomen Yrittäjäopisto</h2>
 </div>
+<div class="paragraph">
+    <div>02/2021-06/2021</div>
+    <div>Robotiika ja teollisuusautomaatio</div>
+</div>
+<div>
+    <h2 class="header2">Haaga-helia ammattikorkeakoulu</h2>
+</div>
+<div class="paragraph">
+    <div>08/2023-</div>
+    <div>ICT Tradenomi</div>
 </body>
 </html>
+
