--- a/tyokokemus.html
+++ b/tyokokemus.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="left-div">
-	    <div><img src="avatarplaceholder.png" alt="avatar" style="width: 210px;"></div>
+		<div><img src="avatarplaceholder.png" alt="avatar" style="width: 210px;"></div>
 	</div>
 	<div id="right-div">
 <div>
@@ -23,30 +23,23 @@
 	<a class="link" href="Yhteystiedot.html">Yhteystiedot</a>
 </div>
 <div>
-    <h2 class="header2"> Esittely</h2>
+    <h2 class="header2">Raute oyj</h2>
+    <h2 class="paragraph"><a href="https://www.raute.fi/sijoittajat/">raute.fi</a></h2>
 </div>
 <div class="paragraph">
-    <div>
-    Olen Leo Ratilainen 23 vuotias ICT tradenomi opiskelija.
-    </div>
-    <div>
-    Olen alunperin kotoisin Lahdesta missä kävin Kone -ja metallialan josta
-    </div>
-    <div>
-    valmistuin kunnossapitoasentajaksi.
-    </div>
-    <div>
-	Nyt asun Vantaalla ja opiskelen Haaga-Heliassa ICT Tradenomiksi.
-    </div>
+    <div>06/2019-08/2019</div>
+    <div>Tein suurimmaksi osaksi puusorvien päätyjen kokoamista</div>
+    <div>ja pneumatiikka ja hyrdauliikka töitä.</div>
+
 </div>
-<h2 class="header2">Taidot</h2>
 <div>
-	<ol class="list">
-		<li>Windows</li>
-		<li>Word</li>
-		<li>Excel</li>
-		<li>PowerPoint</li>
-	</ol>
+    <h2 class="header2">VPS Henkilöstö Palvelut</h2>
+    <h2 class="paragraph"><a href="https://www.vps.fi/">VPS.fi</a></h2>
+</div>
+<div class="paragraph">
+    <div>09/2019-11/2019</div>
+    <div>Valmistin pienosia terveydenhuollossa käytettäviin laitteisiin</div>
+    <div>ja olin niiden kokoonpanossa.</div>
 </div>
 </body>
 </html>
