--- a/tyokokemus.html
+++ b/tyokokemus.html
@@ -17,10 +17,10 @@
 </div>
 <hr>
 <div class="buttonsbox">
-	<a class="link" href="index.html">Esittely</a>
-	<a class="link" href="Tyokokemus.html">Työkokemus</a>
-    <a class="link" href="Koulutus.html">Koulutus</a>
-	<a class="link" href="Yhteystiedot.html">Yhteystiedot</a>
+	<a class="link" href="https://leoratilainen.github.io/index.html">Esittely</a>
+	<a class="link" href="https://leoratilainen.github.io/Tyokokemus.html">Työkokemus</a>
+    <a class="link" href="https://leoratilainen.github.io/Koulutus.html">Koulutus</a>
+	<a class="link" href="https://leoratilainen.github.io/Yhteystiedot.html">Yhteystiedot</a>
 </div>
 <div>
     <h2 class="header2">Raute oyj</h2>
