--- a/koulutus.html
+++ b/koulutus.html
@@ -18,9 +18,9 @@
 <hr>
 <div class="buttonsbox">
 	<a class="link" href="https://leoratilainen.github.io/index.html">Esittely</a>
-	<a class="link" href="https://leoratilainen.github.io/Tyokokemus.html">Työkokemus</a>
-    <a class="link" href="https://leoratilainen.github.io/Koulutus.html">Koulutus</a>
-	<a class="link" href="https://leoratilainen.github.io/Yhteystiedot.html">Yhteystiedot</a>
+	<a class="link" href="http://127.0.0.1:3000/tyokokemus.html">Työkokemus</a>
+    <a class="link" href="http://127.0.0.1:3000/koulutus.html">Koulutus</a>
+	<a class="link" href="http://127.0.0.1:3000/yhteystiedot.html">Yhteystiedot</a>
 </div>
 
 <div>
