--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <hr>
 <div class="buttonsbox">
 	<a class="link" href="https://leoratilainen.github.io/index.html">Esittely</a>
-	<a class="link" href="https://leoratilainen.github.io/Tyokokemus.html">Työkokemus</a>
-    <a class="link" href="https://leoratilainen.github.io/Koulutus.html">Koulutus</a>
-	<a class="link" href="https://leoratilainen.github.io/Yhteystiedot.html">Yhteystiedot</a>
+	<a class="link" href="https://leoratilainen.github.io/tyokokemus.html">Työkokemus</a>
+    <a class="link" href="https://leoratilainen.github.io/koulutus.html">Koulutus</a>
+	<a class="link" href="https://leoratilainen.github.io/yhteystiedot.html">Yhteystiedot</a>
 </div>
 <div>
     <h2 class="header2"> Esittely</h2>
