--- a/tyokokemus.html
+++ b/tyokokemus.html
@@ -18,9 +18,9 @@
 <hr>
 <div class="buttonsbox">
 	<a class="link" href="https://leoratilainen.github.io/index.html">Esittely</a>
-	<a class="link" href="http://127.0.0.1:3000/tyokokemus.html">Työkokemus</a>
-    <a class="link" href="http://127.0.0.1:3000/koulutus.html">Koulutus</a>
-	<a class="link" href="http://127.0.0.1:3000/yhteystiedot.html">Yhteystiedot</a>
+	<a class="link" href="https://leoratilainen.github.io/tyokokemus.html">Työkokemus</a>
+    <a class="link" href="https://leoratilainen.github.io/koulutus.html">Koulutus</a>
+	<a class="link" href="https://leoratilainen.github.io/yhteystiedot.html">Yhteystiedot</a>
 </div>
 <div>
     <h2 class="header2">Raute oyj</h2>
