--- a/tyokokemus.html
+++ b/tyokokemus.html
@@ -24,7 +24,7 @@
 </div>
 <div>
     <h2 class="header2">Raute oyj</h2>
-    <h2 class="paragraph"><a href="https://www.raute.fi/sijoittajat/">raute.fi</a></h2>
+    <h2 class="paragraph"><a target="_blank" href="https://www.raute.fi/sijoittajat/">raute.fi</a></h2>
 </div>
 <div class="paragraph">
     <div>06/2019-08/2019</div>
@@ -34,7 +34,7 @@
 </div>
 <div>
     <h2 class="header2">VPS Henkilöstö Palvelut</h2>
-    <h2 class="paragraph"><a href="https://www.vps.fi/">VPS.fi</a></h2>
+    <h2 class="paragraph"><a target="_blank" href="https://www.vps.fi/">VPS.fi</a></h2>
 </div>
 <div class="paragraph">
     <div>09/2019-11/2019</div>
