--- a/koulutus.html
+++ b/koulutus.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="left-div">
-	    <div><img src="avatarplaceholder.png" alt="avatar" style="width: 210px;"></div>
+	    <div><img class="avatar" src="avatarplaceholder.png" alt="avatar"></div>
 	</div>
 	<div id="right-div">
 <div>
@@ -44,6 +44,8 @@
 <div class="paragraph">
     <div>08/2023-</div>
     <div>ICT Tradenomi</div>
+</div>
+</div>
 </body>
 </html>
 
