--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div id="left-div">
-		<div><img src="avatarplaceholder.png" alt="avatar" style="width: 210px;"></div>
+        <div><img class="avatar" src="avatarplaceholder.png" alt="avatar"></div>
 	</div>
 	<div id="right-div">
 <div>
@@ -39,6 +39,7 @@
         </tr>
     </table>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7927.940215068574!2d24.871044237987974!3d60.21407809887931!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469209e293bf0ddf%3A0x5a8812df75691ba4!2sKotipizza%20Etel%C3%A4-Haaga!5e0!3m2!1sfi!2sfi!4v1696779471322!5m2!1sfi!2sfi" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 </div>
 </body>
 </html>
